--- a/07_Principal_component_analysis.ipynb
+++ b/07_Principal_component_analysis.ipynb
@@ -40,7 +40,13 @@
     "### Using Factors and Components\n",
     "1. Both factors and components represent what is left of a dataset after information redundancy and noise is stripped out.\n",
     "\n",
-    "2. Use them as input variables for machine learning algorithms to generate predictions from these compressed representations of the data."
+    "2. Use them as input variables for machine learning algorithms to generate predictions from these compressed representations of the data.\n",
+    "\n",
+    "### How much of the data set's original information must you retain when looking at the percentage of cumulative variance?\n",
+    "At least 70%.\n",
+    "\n",
+    "### If your factor loading is greater than one, what does this suggest?\n",
+    "You ha"
    ]
   },
   {
@@ -280,6 +286,21 @@
    ],
    "source": [
     "sb.heatmap(comps, cmap=\"Blues\", annot=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PCA Results\n",
+    "\n",
+    "The results from our correlation heatmap show that one principal component one is strongly positively correlated with petal length and moderately positively correlated with sepal length and petal width. \n",
+    "\n",
+    "Component 1 is slightly negatively correlated with sepal width. And principal component number two is strongly negatively correlated with sepal length and sepal width and slightly negatively correlated with petal length and petal width. \n",
+    "\n",
+    "#### How you can use these components once you've isolated them\n",
+    "\n",
+    "You can use them as input variables for machine learning algorithms. So in the case of the Iris dataset, you could use these two components we've generated as inputs for a classifier in order to predict species labels for new incoming data points."
    ]
   },
   {
