--- a/07_Principal_component_analysis.ipynb
+++ b/07_Principal_component_analysis.ipynb
@@ -46,7 +46,7 @@
     "At least 70%.\n",
     "\n",
     "### If your factor loading is greater than one, what does this suggest?\n",
-    "You ha"
+    "You have highly correlated factors."
    ]
   },
   {
