--- a/09_Instance-basedLearning_k-NearestNeighbor.ipynb
+++ b/09_Instance-basedLearning_k-NearestNeighbor.ipynb
@@ -12,6 +12,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-Nearest Neighbor (KNN) Classification \n",
+    "**A supervised classifier that memorizes observations from within a test set to predict classification labels for new, unlabeled observations.**\n",
+    "\n",
+    "A supervised machine learning method that you can use to classify instances based on arithmetic difference between features in a labeled dataset. \n",
+    "\n",
+    "**KNN makes predictions based on how similar training obsevations are to the new, incoming observations.** The more similar the observation values, the more likely they will be classified with the same label.\n",
+    "\n",
+    "### K-Nearest Neighbor Use Cases\n",
+    "- **Stock Price Prediction**\n",
+    "- **Credit Risk Analysis**\n",
+    "- **Predictive Trip Planning**\n",
+    "- **Recommendation Systems**\n",
+    "\n",
+    "### K-Nearest Neighbor Assumptions\n",
+    "- Dataset has little noise\n",
+    "- Dataset is labeled\n",
+    "- Dataset contains only relevant features\n",
+    "- Dataset has distinguishable subgroups\n",
+    "\n",
+    "***You also want to avoid using K-Nearest Neighbor on large datasets because it's probably going to take a very, very long time depending on how big your dataset actually is.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -133,7 +159,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -159,16 +187,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Interpreting Results\n",
+    "\n",
+    "### Recall: a measure of your model's completeness\n",
+    "- Of all your points that were labeled 1, only 67% of the results that were returned were truly relevant.\n",
+    "- Of the entire dataset, 83% of the results that were returned were truly relevant.\n",
+    "\n",
+    "### High precision + Low recall = \n",
+    "**= Few results returned, but many of the label predictions that are returned are correct.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Thank you for going through this project. \n",
+    "Your comments are more then welcome to ybezginova2021@gmail.com***\n",
+    "\n",
+    "***Best wishes,***\n",
+    "\n",
+    "***Yulia***"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
