--- a/GroupingMLAlgorithims.ipynb
+++ b/GroupingMLAlgorithims.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4cae599",
+   "id": "2678dcbe",
    "metadata": {},
    "source": [
     "***Machine Learning*** is the process of deploying compute power to identify trends and patterns in data in order to make predictions about how that data will behave in the future.\n",
@@ -51,27 +51,41 @@
     "\n",
     "### Machine Learning Algorithms by Function\n",
     "\n",
-    "- **Regression**\n",
+    "#### SUPERVISED LEARNING\n",
+    "\n",
+    "- **Regression (labeled)**\n",
     "    - Linear Regression\n",
     "    - Logistic Regression\n",
     "    \n",
-    "- **Clustering**\n",
-    "    - K-means clustering\n",
-    "    - Hierarchical methods\n",
-    "    - DBSCAN\n",
+    "- **Instance-based classification (labeled)** learns from labeled data to predict categories for new data points; the class labels are discrete, unordered values:\n",
+    "    - K-nearest neighbor algorithm (KNN)\n",
     "    \n",
-    "- **Dimension reduction**\n",
+    "#### UNSUPERVISED LEARNING\n",
+    "    \n",
+    "- **Dimension reduction (unlabeled, unsupervised learning)** takes unlabeled, continuous, high-dimensional data and compresses it into a smaller synthetic representation:\n",
     "    - Explanatory factor analysis\n",
     "    - Principal component analysis (PCA)\n",
+    "    \n",
+    "    \n",
+    "- **Clustering (unlabeled)** takes unlabeled, categorical data and organizes it into clusters based on similarity in attribute values of the data points:\n",
+    "    - **K-means clustering**\n",
+    "        - Location-based crime prediction and prevention\n",
+    "        - Customer segmentation for marketing\n",
+    "        - Document classification\n",
+    "        - Insurance fraud prediction and prevention\n",
+    "        - IT operational efficiences\n",
+    "        - Oil and gas site evaluations\n",
+    "        - Video analytics\n",
+    "        - Patients segmentation for preventative medicine\n",
+    "    - Hierarchical methods\n",
+    "    - DBSCAN\n",
+    "\n",
     "    \n",
     "- **Association rules**\n",
     "    - Association rules with Apriori\n",
     "    \n",
     "- **Deep learning**\n",
     "    - Perceptron\n",
-    "    \n",
-    "- **Instance-based**\n",
-    "    - K-nearest neighbor algorithm (KNN)\n",
     "    \n",
     "- **Decision trees**\n",
     "    - CART\n",
@@ -82,9 +96,9 @@
     "- **Ensemble**\n",
     "    - Random Forest\n",
     "    \n",
-    "- **Regularization**\n",
-    "    - _used in neural networks_\n",
-    "    \n",
+    "- **Regularization** (_used in neural networks_)\n",
+    "    - https://machinelearningmastery.ru/concept-of-regularization-28f593cf9f8c/\n",
+    "\n",
     "    \n",
     "### ML vocabulary\n",
     "\n",
@@ -98,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a87300b5",
+   "id": "a3ef0123",
    "metadata": {},
    "outputs": [],
    "source": []
